# uni.advanced_programming.project

./: .gitignore  .gitmodules  README.md
code_documentation/: crates.js  search-index.js  src-files.js
code_documentation/client/: all.html  index.html  struct.Client.html
code_documentation/dr_ones/: all.html  fn.disable_logging.html  fn.enable_logging.html  fn.redirect_logs_to_file.html  index.html  sidebar-items.js  struct.Drone.html
code_documentation/host_node/: all.html  index.html  sidebar-items.js  trait.HostNode.html
code_documentation/main/: all.html  (+2 more)
doc/: AP-protocol_0.1.md  documentation.md  faq.md  our_choices.md  stuff_to_do.md
dr_ones/: Cargo.toml  auto_cargo_update.sh  full_git_pull.sh  full_git_push.sh  init_.toml  init_2clients.toml  init_2servers.toml  init_tree.toml  output.txt  test-crates.sh
dr_ones/.cargo/: config.toml
dr_ones/src/: api  lib.rs  main.rs  types
dr_ones/src/client/: mod.rs
dr_ones/src/drone/: mod.rs
dr_ones/src/network_initializer/: init.toml  mod.rs  parser.rs
dr_ones/src/server/: mod.rs
dr_ones/src/simulation_controller/: cli.rs  gui.rs  mod.rs
dr_ones/src/types/: mod.rs  packet.rs
dr_ones/src/utils/: mod.rs
dr_ones/tests/: aaa_how_to_test.txt  ack_sent_back.rs  cilent_flooding.rs  client_flooding.rs  crash_test.rs  fragment_forward.rs  how_to_test.txt  test_fragments.rs  try.rs  try_2.rs  wrong_source_routing_header.rs
dr_ones/tests/ack_sent_back/: log.txt
dr_ones/tests/adder/src/: lib.rs
dr_ones/tests/client_flooding/: log.txt
dr_ones/tests/common/: mod.rs
dr_ones/tests/crash_test/: log.txt
dr_ones/tests/fragment_forward/: log.txt
dr_ones/tests/wrong_source_routing_header/: log.txt
dr_ones/topologies/: init.toml
(+102 files in other folders)
