[package]
name = "dr_ones"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
rand = "0.8.5"
toml = "0.8.19"
serde = { version = "1.0.214", features = ["derive"], optional = true }
crossbeam-channel = "0.5.0"
macroquad = "0.3"
indexmap = "2.7.0"
async-std = "1.10.0"

[features]
default = ["serialize"]
serialize = ["serde"]
